RESOLVED FIXED75886
Bytecode dumping is broken for call opcodes (due to two new operands)
https://bugs.webkit.org/show_bug.cgi?id=75886
Summary Bytecode dumping is broken for call opcodes (due to two new operands)
Geoffrey Garen
Reported 2012-01-09 13:04:41 PST
Bytecode dumping is broken for call opcodes (due to two new operands)
Attachments
Patch (4.90 KB, patch)
2012-01-09 13:06 PST, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2012-01-09 13:06:15 PST
Geoffrey Garen
Comment 2 2012-01-11 17:01:03 PST
Andy Wingo
Comment 3 2012-01-12 09:20:01 PST
*** Bug 76078 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.