Bytecode dumping is broken for call opcodes (due to two new operands) https://bugs.webkit.org/show_bug.cgi?id=75886

Reviewed by Oliver Hunt.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::printCallOp): Made a helper function, so I wouldn't have
to fix this more than once. The helper function skips the extra two operands
at the end of the opcode, used for optimization.

(JSC::CodeBlock::dump): Used the helper function.

* bytecode/CodeBlock.h: Declared the helper function.


Canonical link: https://commits.webkit.org/92936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104770 268f45cc-cd09-0410-ab3c-d52691b4dbfc